--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -1,9 +1,10 @@
 // Body
-$body-bg: #f8fafc;
+$body-bg: #fff;
+$body-color: #4d4d4d;
 
 // Typography
-$font-family-sans-serif: 'Nunito', sans-serif;
-$font-size-base: 0.9rem;
+$font-family-sans-serif: 'Inter', sans-serif;
+$font-size-base: 1rem;
 $line-height-base: 1.6;
 
 // Colors
